fixed alignment with logo

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ a:visited { color: #205caa; }*/
 .wrap {
   max-width: 800px;
   padding: 0 30px;
-  margin: 0 85px;
+  margin: 0 88px;
   zoom: 1;
 }
 
